[package]
name = "lambda-balance"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = "0.9.2"
lambda_runtime = "0.9.1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "fmt",
] }
secrecy = { version = "0.8", features = ["serde"] }
tower = "0.4"
pin-project = "1.1"
chrono = "0.4.9"
md5 = "0.7"
base64 = "0.21"
reqwest = { version = "0.11", features = ["json", "multipart"] }
jwt = { version = "0.16", features = ["openssl"] }
sha2 = "0.10"
openssl = { version = "0.10" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
eyre = "0.6"
color-eyre = "0.6"
config = { version = "0.14", features = ["yaml"] }
dotenv = { version = "0.15" }

[dev-dependencies]
fake = "2.6"
wiremock = "0.6"
claims = "0.7"
