[package]
name = "qi-client"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
http = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "fmt",
] }
secrecy = { version = "0.8", features = ["serde"] }
chrono = { version = "0.4.9", features = ["unstable-locales"] }
md5 = "0.7"
base64 = "0.21"
reqwest = { version = "0.11", features = ["json", "multipart"] }
reqwest-middleware = "0.2"
http-signature-normalization-reqwest = { version = "0.11", default-features = false, features = [
  "default-spawner",
  "sha-2",
] }
jwt = { version = "0.16", features = ["openssl"] }
josekit = { version = "0.8.5" }
sha2 = "0.10"
openssl = { version = "0.10" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
config = { version = "0.14", features = ["yaml"] }
dotenv = { version = "0.15" }

[dev-dependencies]
fake = "2.6"
wiremock = "0.6"
claims = "0.7"
